--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -82,7 +82,7 @@
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexColorCycler.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TeleType.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_ExampleScript_01.cs" />
-     <Compile Include="Assets\Asset\02.Scripts\Game\UI\SelectableController.cs" />
+     <Compile Include="Assets\Asset\02.Scripts\Common\UI\SelectableController.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TextConsoleSimulator.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexZoom.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ObjectSpin.cs" />
@@ -90,6 +90,9 @@
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventCheck.cs" />
      <Compile Include="Assets\Asset\02.Scripts\Game\Managers\GameManager.cs" />
+     <Compile Include="Assets\Asset\02.Scripts\Game\UI\HPController.cs" />
+     <Compile Include="Assets\Asset\02.Scripts\Game\Observers\HPSubject.cs" />
+     <Compile Include="Assets\Asset\02.Scripts\Game\Observers\IHPObserver.cs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
