- 상점 기능 추가 중
Signed-off-by: pocari_tea <ekawn12@naver.com>

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -93,32 +93,102 @@
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventCheck.cs" />
      <Compile Include="Assets\Asset\02.Scripts\Game\Managers\GameManager.cs" />
+     <Folder Include="Assets" />
+     <Folder Include="Assets\Asset" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
+     <Folder Include="Assets\Asset\02.Scripts\Game\ScriptableObjects" />
+     <Folder Include="Assets\TextMesh Pro\Examples &amp; Extras\Sprites" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
+     <Folder Include="Assets\TextMesh Pro\Sprites" />
+     <Folder Include="Assets\TextMesh Pro\Resources\Sprite Assets" />
+     <Folder Include="Assets\Asset\02.Scripts\Game\Prefabs" />
+     <Folder Include="Assets\Asset\07.Physics" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
+     <Folder Include="Assets\Resources" />
      <None Include="Assets\TextMesh Pro\Examples &amp; Extras\Fonts\Oswald-Bold - OFL.txt" />
+     <Folder Include="Assets\Asset\05.Animation\Controllers" />
      <None Include="Assets\Asset\04.Resources\BillingMode.json" />
+     <Folder Include="Assets\Asset\04.Resources\Sprites\Player" />
      <None Include="Assets\TextMesh Pro\Examples &amp; Extras\Fonts\Anton OFL.txt" />
+     <Folder Include="Assets\Asset\02.Scripts\Game" />
+     <Folder Include="Assets\TextMesh Pro\Resources\Fonts &amp; Materials" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
+     <Folder Include="Assets\Asset\99.Plugins\x86_64" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
+     <Folder Include="Assets\TextMesh Pro\Resources" />
+     <Folder Include="Assets\Asset\08.Lightings" />
+     <Folder Include="Assets\Asset\06.Sounds\BGM" />
+     <Folder Include="Assets\Asset\04.Resources\Sprites" />
+     <Folder Include="Assets\Asset\02.Scripts\Lobby" />
+     <Folder Include="Assets\Asset\02.Scripts\Game\Players" />
+     <Folder Include="Assets\Asset\02.Scripts\Game\Players\Controllers" />
      <None Include="Assets\Asset\04.Resources\Shaders\BlurShader.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
+     <Folder Include="Assets\Asset\02.Scripts\Game\Managers" />
+     <Folder Include="Assets\TextMesh Pro" />
+     <Folder Include="Assets\Asset\04.Resources\Shaders" />
+     <Folder Include="Assets\TextMesh Pro\Examples &amp; Extras\Fonts" />
+     <Folder Include="Assets\TextMesh Pro\Examples &amp; Extras\Resources" />
+     <Folder Include="Assets\Asset\02.Scripts\Lobby\UI" />
+     <Folder Include="Assets\Asset\06.Sounds" />
+     <Folder Include="Assets\Asset\02.Scripts\Lobby\UI\Controllers" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface.shader" />
      <None Include="Assets\TextMesh Pro\Sprites\EmojiOne Attribution.txt" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Custom-Atlas.shader" />
+     <Folder Include="Assets\TextMesh Pro\Examples &amp; Extras\Materials" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF.shader" />
+     <Folder Include="Assets\Asset\03.Prefabs\Enemys" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
+     <Folder Include="Assets\Asset\02.Scripts\Game\Observers" />
+     <Folder Include="Assets\Asset\04.Resources\Material" />
      <None Include="Assets\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
+     <Folder Include="Assets\Asset\99.Plugins\Android\libs\armeabi-v7a" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
+     <Folder Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts" />
+     <Folder Include="Assets\Asset\99.Plugins\iOS" />
      <None Include="Assets\Resources\BillingMode.json" />
+     <Folder Include="Assets\Asset\09.ScriptableObjects\Enemys" />
+     <Folder Include="Assets\Asset\05.Animation\Clips" />
+     <Folder Include="Assets\Asset\01.Scenes" />
+     <Folder Include="Assets\Asset\04.Resources\Sprites\UI" />
      <None Include="Assets\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
+     <Folder Include="Assets\TextMesh Pro\Shaders" />
+     <Folder Include="Assets\TextMesh Pro\Examples &amp; Extras\Resources\Sprite Assets" />
+     <Folder Include="Assets\TextMesh Pro\Resources\Style Sheets" />
+     <Folder Include="Assets\TextMesh Pro\Fonts" />
+     <Folder Include="Assets\Asset\02.Scripts\Game\Players\Models" />
      <None Include="Assets\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
+     <Folder Include="Assets\Asset\04.Resources\Sprites\Enemy" />
+     <Folder Include="Assets\Asset\02.Scripts\Lobby\UI\Views" />
+     <Folder Include="Assets\TextMesh Pro\Examples &amp; Extras\Prefabs" />
+     <Folder Include="Assets\Asset\02.Scripts\Game\Maps" />
+     <Folder Include="Assets\TextMesh Pro\Examples &amp; Extras\Scenes" />
+     <Folder Include="Assets\Asset\03.Prefabs\Player" />
+     <Folder Include="Assets\Asset\09.ScriptableObjects" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
+     <Folder Include="Assets\Asset\02.Scripts\Common" />
+     <Folder Include="Assets\Asset\99.Plugins\Android\libs\x86" />
+     <Folder Include="Assets\Asset\99.Plugins" />
+     <Folder Include="Assets\Asset\02.Scripts\Game\UI" />
+     <Folder Include="Assets\Asset\99.Plugins\Android\libs" />
+     <Folder Include="Assets\Asset\03.Prefabs" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
      <None Include="Assets\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
+     <Folder Include="Assets\TextMesh Pro\Examples &amp; Extras\Textures" />
+     <Folder Include="Assets\TextMesh Pro\Documentation" />
+     <Folder Include="Assets\TextMesh Pro\Examples &amp; Extras" />
+     <Folder Include="Assets\Asset\99.Plugins\Android" />
+     <Folder Include="Assets\Asset\04.Resources" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
+     <Folder Include="Assets\Asset\02.Scripts\Common\UI" />
+     <Folder Include="Assets\Asset\06.Sounds\SoundEffects" />
+     <Folder Include="Assets\TextMesh Pro\Examples &amp; Extras\Resources\Fonts &amp; Materials" />
+     <Folder Include="Assets\Asset\05.Animation" />
+     <Folder Include="Assets\TextMesh Pro\Examples &amp; Extras\Resources\Color Gradient Presets" />
      <None Include="Assets\TextMesh Pro\Sprites\EmojiOne.json" />
+     <Folder Include="Assets\Asset\10.Fonts" />
+     <Folder Include="Assets\Asset\02.Scripts" />
      <None Include="Assets\TextMesh Pro\Shaders\TMP_Sprite.shader" />
      <None Include="Assets\TextMesh Pro\Examples &amp; Extras\Fonts\Bangers - OFL.txt" />
      <Reference Include="UnityEngine">
